{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 12,
  "lineage": "a1bbb4f5-3353-06a5-2681-377980b001ea",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "TerraForm_Managed_Node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ad704c126371a549",
            "arn": "arn:aws:ec2:ap-south-1:149417358945:instance/i-0e26826786d2c7918",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e26826786d2c7918",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "slave1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01b8c2a3c387f2021",
            "private_dns": "ip-192-168-1-215.ap-south-1.compute.internal",
            "private_ip": "192.168.1.215",
            "public_dns": "ec2-52-66-209-148.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.209.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01f6ee9f7202a4d88",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa19406b9a7e22f1",
            "tags": {
              "Environment": "production",
              "Name": "K8S_Master_Node"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "K8S_Master_Node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-074696dc01e3b663e"
            ]
          },
          "dependencies": [
            "aws_security_group.TerraformSG",
            "aws_subnet.subnet_public1_Lab1",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ad704c126371a549",
            "arn": "arn:aws:ec2:ap-south-1:149417358945:instance/i-022d23194e3917ef1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-022d23194e3917ef1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "slave1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e1c1b9d8f37fbe03",
            "private_dns": "ip-192-168-1-182.ap-south-1.compute.internal",
            "private_ip": "192.168.1.182",
            "public_dns": "ec2-13-233-178-168.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.178.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-058cc3424bc9d7415",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa19406b9a7e22f1",
            "tags": {
              "Environment": "production",
              "Name": "K8S_Slave_Node1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "K8S_Slave_Node1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-074696dc01e3b663e"
            ]
          },
          "dependencies": [
            "aws_security_group.TerraformSG",
            "aws_subnet.subnet_public1_Lab1",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ad704c126371a549",
            "arn": "arn:aws:ec2:ap-south-1:149417358945:instance/i-080f395fbc0742de1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-080f395fbc0742de1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "slave1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fd03767672fe6948",
            "private_dns": "ip-192-168-1-112.ap-south-1.compute.internal",
            "private_ip": "192.168.1.112",
            "public_dns": "ec2-13-233-138-210.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.138.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08e0b9f4280a55208",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa19406b9a7e22f1",
            "tags": {
              "Environment": "production",
              "Name": "K8S_Slave_Node2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "K8S_Slave_Node2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-074696dc01e3b663e"
            ]
          },
          "dependencies": [
            "aws_security_group.TerraformSG",
            "aws_subnet.subnet_public1_Lab1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149417358945:internet-gateway/igw-09b26986e6cb9e169",
            "id": "igw-09b26986e6cb9e169",
            "owner_id": "149417358945",
            "tags": {
              "Name": "Terraform_IG"
            },
            "tags_all": {
              "Name": "Terraform_IG"
            },
            "vpc_id": "vpc-0ac4137d35d3b2d45"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149417358945:route-table/rtb-04140af58ac36225d",
            "id": "rtb-04140af58ac36225d",
            "owner_id": "149417358945",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09b26986e6cb9e169",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TerraformRouteTable"
            },
            "tags_all": {
              "Name": "TerraformRouteTable"
            },
            "vpc_id": "vpc-0ac4137d35d3b2d45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0bf30224df7cd99",
            "route_table_id": "rtb-04140af58ac36225d",
            "subnet_id": "subnet-0fa19406b9a7e22f1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.subnet_public1_Lab1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TerraformSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149417358945:security-group/sg-074696dc01e3b663e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074696dc01e3b663e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "TerraformSG",
            "name_prefix": "",
            "owner_id": "149417358945",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "TerraformSG"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "TerraformSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac4137d35d3b2d45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public1_Lab1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149417358945:subnet/subnet-0fa19406b9a7e22f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0fa19406b9a7e22f1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "149417358945",
            "tags": {
              "Environment": "production",
              "Name": "TerraformPublicSubnetLab1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "TerraformPublicSubnetLab1"
            },
            "vpc_id": "vpc-0ac4137d35d3b2d45"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149417358945:vpc/vpc-0ac4137d35d3b2d45",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-045017efba6f6133d",
            "default_route_table_id": "rtb-0bd0bd7bebb671b89",
            "default_security_group_id": "sg-0d2e134e9d3a7ba68",
            "dhcp_options_id": "dopt-ceee21a5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ac4137d35d3b2d45",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bd0bd7bebb671b89",
            "owner_id": "149417358945",
            "tags": {
              "Environment": "production",
              "Name": "TerraformVpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "TerraformVpc"
            }
          }
        }
      ]
    }
  ]
}